--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,10 +15,8 @@ gendiff = "gendiff.scripts.gendiff:main"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-
-
-[tool.poetry.group.dev.dependencies]
 flake8 = "^6.1.0"
+#pytest = "^"
 
 
 [build-system]
