--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ gendiff = "gendiff.scripts.gendiff:main"
 python = "^3.10"
 flake8 = "^6.1.0"
 pytest = "^7.4.4"
+pytest-cov = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core"]
