--- a/.github/workflows/diff-check.yml
+++ b/.github/workflows/diff-check.yml
@@ -24,5 +24,10 @@ jobs:
       - name: check linter
         run: make lint
 
-      - name: testing
-        run: make test
+      - name: checking coverage
+        uses: paambaati/codeclimate-action@v3.2.0
+        env:
+          CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
+        with:
+          coverageCommand: make coverage
+          debug: true
