--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,11 @@ packages = [
 gendiff = "gendiff.scripts.gendiff:main"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.9"
 flake8 = "^6.1.0"
 pytest = "^7.4.4"
 pytest-cov = "^4.1.0"
+pyyaml = "^6.0.1"
 
 [build-system]
 requires = ["poetry-core"]
