--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,12 @@ gendiff = "gendiff.scripts.gendiff:main"
 
 [tool.poetry.dependencies]
 python = "^3.9"
+pyyaml = "^6.0.1"
+
+[tool.poetry.group.dev.dependencies]
 flake8 = "^6.1.0"
 pytest = "^7.4.4"
 pytest-cov = "^4.1.0"
-pyyaml = "^6.0.1"
 
 [build-system]
 requires = ["poetry-core"]
